# vineland

./: .gitignore  INFRA.md  README.md
vineland/: .env.docker.example  .env.example  .gitbook.yaml  .gitignore  AGENT_CONNECT_SPEC.md  HANDOFF_MAINNET.md  IP_OWNERSHIP.md  LICENSE  OFFER_AGENT_PAYMENT_PILOT_5K.md  POSITIONING_PLAN.md  README.md  docker-compose.yml  ecosystem.config.cjs  market-intel.html  package.json  pnpm-lock.yaml  tsconfig.base.json
vineland-solana/: .gitignore  Anchor.toml  NIGHT_PROGRESS.md  bt2.sh  build-test.sh  devnet-go.sh  fullcheck.sh  package-lock.json  package.json  runcheck.sh  runtest.sh  runtest2.sh  runtest3.sh  test.sh  tsconfig.json
vineland-solana/programs/vineland_mandate/: Cargo.toml
vineland-solana/programs/vineland_mandate/src/: lib.rs
vineland-solana/scripts/: devnet-testmint.cjs  e2e-charge-devnet.cjs  e2e-paysplit-devnet.cjs
vineland-solana/sdk/: index.ts  mandate.ts  tsconfig.json  wallet.ts
vineland-solana/tests/: check.cjs  vineland_mandate.ts
vineland-zk/: .gitignore  DESIGN.md  Dockerfile.prover  HANDOFF.md  README.md  WIRING.md  attest.js  demo_live.sh  mandates.json  package-lock.json  package.json  prove_batch.js  to_soroban.js  verify_mainnet.sh
vineland-zk/circuits/: compliance.circom  compliance_v2.circom  kyc.circom  mandate.circom  mandate_sd.circom
vineland-zk/contract/: Cargo.toml  deploy_mainnet.sh  deploy_testnet.sh
vineland-zk/contract/src/: lib.rs
vineland-zk/demo/: composed.html  index.html
vineland/.github/workflows/: deploy-production.yml  deploy-staging.yml  test.yml
vineland/agents/: README.md
vineland/agents/antiabuse/: antiabuse.mjs  antiabuse.ssl  antiabuse.test.mjs
vineland/agents/authority/: README.md  authority.ssl  authorize.mjs  authorize.test.mjs
vineland/agents/axl/: bind.mjs  bind.test.mjs  compile.mjs  compile.test.mjs  structured.test.mjs
vineland/agents/billing/: bill.mjs  bill.test.mjs  billing.ssl
vineland/agents/concierge/: README.md  concierge.ssl
vineland/agents/ifc/: README.md  ifc.py  test_ifc.py
vineland/agents/perena/: perena_ops.ssl
vineland/agents/pulse/: .env.example  .gitignore  README.md  pulse.py  pulse.ssl
vineland/agents/settlement/: settle.mjs  settle.test.mjs  settlement.ssl
vineland/agents/tee/: README.md  tee.py  (+1 more)
vineland/axl-compiler/: Cargo.toml  MOAT_EVOLUTION_2026_06_02.md
vineland/axl-compiler/examples/: agent_wallet_m1.axl  agent_wallet_m2.axl  agent_wallet_m3.axl  agent_wallet_none.axl  agent_wallet_unsupported.axl  axl_ctx_bad.json  axl_ctx_ok.json  axl_schemas.json  axl_strategist.axl  axl_tools.json  ctx_bad.json  schemas.json  settlement.axl  tools.json
vineland/axl-compiler/src/: certify.rs  compile.rs  error.rs  json.rs  lib.rs  parse.rs  predicate.rs  prove.rs  sha256.rs  smt.rs  value.rs
vineland/axl-compiler/tests/: certify.rs  fidelity.rs  invariant_prove.rs
vineland/contracts/receipt/: .gitignore  Cargo.toml  deploy-testnet.sh
vineland/contracts/receipt/src/: lib.rs  test.rs
vineland/contracts/smart-wallet/: Cargo.toml  DEPLOYED.md  MAINNET_PREP.md  SECURITY_AUDIT.md  demo-testnet.sh  deploy-testnet.sh
vineland/contracts/smart-wallet/src/: lib.rs  test.rs
vineland/contracts/subscription/: .gitignore  Cargo.toml  DEPLOYED.md  _mainnet-setup.mjs  demo-testnet.mjs  deploy-mainnet.sh  deploy-testnet.sh  f5-mainnet-smoke.mjs
vineland/contracts/subscription/src/: lib.rs  test.rs
vineland/docs/: 4P_SOLANA_RAMP.md  GTM_agent_integrity_offer.md  MERCHANT_ONBOARDING.md  README.md  SCF_GRANT_OUTLINE.md  SOLANA_FRONTEND_PORT.md  SOLANA_MIGRATION.md  SPRINT_2026-06-03_04.md  SUMMARY.md  agent-governance-x402.md  axl.md  deploy-secrets.md  mainnet-readiness.md  openapi.yaml  quickstart-agent.md  quickstart-human.md  quickstart.md  verified-spending-policy-x402.md
vineland/eval/: agent_governance_eval.py  prove_vs_judge_benchmark.mjs
vineland/migrations/: 20260615190000_ramp_transactions.sql
vineland/scripts/: attested-scheduler.mjs  autocharge-scheduler.mjs  deploy-web.sh  e2e-agent-wallet-mainnet.mjs  e2e-agent-wallet-testnet.mjs  e2e-attested-charge-mainnet.sh  e2e-autocharge-attested-testnet.sh  e2e-autocharge-fee-testnet.sh  e2e-autocharge-testnet.sh  e2e-oracle-to-stellar-testnet.sh  e2e-passkey-pay-testnet.mjs  e2e-payment-testnet.mjs  e2e-subscription-charge-mainnet.mjs  e2e-subscriptions.mjs  platform-setup.mjs  policy-checkout-spike-server.mjs  upload-deploy-mainnet.mjs  usdc-setup-mainnet.mjs
vineland/supabase/: config.toml  seed.sql
(+301 files in other folders)
