[package]
name = "vineland-smart-wallet"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Galmanus <manuel@bluewaveai.online>"]
description = "Soroban smart wallet with on-chain user-enforced spending policies + passkey (secp256r1/WebAuthn) signer — composes with vineland-subscription so the merchant pulls funds while the user's wallet locally enforces per-merchant limits"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "26"

[dev-dependencies]
soroban-sdk = { version = "26", features = ["testutils"] }
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
