[package]
name = "vineland-subscription"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Galmanus <manuel@bluewaveai.online>"]
description = "Soroban subscription contract for vineland — recurring payment primitive on Stellar"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
# Demo-only: lowers the minimum subscription period to 1s so a live testnet
# demo can show repeated auto-charges stopping at the cap. NEVER ship to mainnet.
demo = []

[dependencies]
soroban-sdk = "26"

[dev-dependencies]
soroban-sdk = { version = "26", features = ["testutils"] }
ed25519-dalek = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
